fixing wrapping on under review section 1.7.4 prod

--- a/src/app/underreview/underreview.page.scss
+++ b/src/app/underreview/underreview.page.scss
@@ -25,3 +25,6 @@ ion-badge.status{
 ion-text.status-text{
     color: white !important;
 }
+p.comment{
+    white-space: normal;
+}
